edited About Me html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <section id="about-me">
           <h1>About Me</h1>
           <div>
-            Hello! <br/><br/>I am a Colorado Native and current business major at CU Boulder. I have been in the Food Service Management industry for over three years and love to travel. I am eager to get started with my career in this field, I am a travel enthusiast with skills in business, marketing, and computer programming. I am looking to use my skills to start a successful career in the Computer Programming Industry.>
+            Hello! <br/><br/>I am a Colorado Native and current business major at CU Boulder. I have been in the Food Service Management industry for over three years and love to travel. I am eager to get started with my career in this field, I am a travel enthusiast with skills in business, marketing, and computer programming. I am looking to use my skills to start a successful career in the Computer Programming Industry.
         </div>
       </section>
       <section>
