fixed contact me section

--- a/index.html
+++ b/index.html
@@ -83,32 +83,18 @@
                 src="./assets/images/cards.jpg"
                 alt="weather-dashboard-react"
               />
-              <div class="work-subtitle"><h3>Playing Javascript</h3></div></a
-            >
+              <div class="work-subtitle"><h3>Playing Javascript</h3></div></a>
           </div>
         </section>
-      <section>
-        <div id="contact-me">
-          <h1>Contact Me</h1>
-          <ul>
-            <li>
-              <a href="Phone-Number">555-633-3464</a>
-            </li>
-            <li>
-              <a href="Email">katlynboches@gmail.com</a>
-            </li>
-            <li>
-              <a href="Github">Github</a>
-
-            </li>
-            <li>
-              <a href="Twitter">Twitter</a>
-            </li>
-            <li>
-              <a href="Spotify">Spotify</a>
-            </li>
-          </ul>
-
+      <section id="contact-me">
+        <h1>Contact Me</h1>
+        <div><a href="phone-number">(720) 628-3887)</a>
+          <a href="mailto:katlynboches@gmail.com" target="_blank"
+            >katlynboches@gmail.com</a>
+          <a href="https://github.com/Katlyn627" target="_blank">Github</a>
+          <a href="https://www.linkedin.com/in/katlyn-boches-20110732/" target="_blank"
+            >LinkedIn</a>
+        </div>
       </section>
     </main>
   </body>
