fixed styling and added media style characteristics

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header>
-      <div class = "logo">Katlyn Irene Boches</h1></div>
+      <div class = "logo"><h1>Katlyn Boches</h1></div>
       <nav>
             <a href="#about-me">About Me</a>
             <a href="#work">Work</a>
@@ -17,7 +17,7 @@
       </nav>
     </header>
     <div class="main-image">
-      <div class="subtitle"><h1>Going to be a Computer Programmer</h1></div>
+      <div class="subtitle"><h1>Going to be a Computer Programmer!!!</h1></div>
     </div>
     <main>
       <section id="about-me">
@@ -81,9 +81,9 @@
               ><img
                 class="work-img"
                 src="./assets/images/cards.jpg"
-                alt="weather-dashboard-react"
+                alt="sort-deck-function"
               />
-              <div class="work-subtitle"><h3>Playing Javascript</h3></div></a>
+              <div class="work-subtitle"><h3>Playing Cards Fuction Creator</h3></div></a>
           </div>
         </section>
       <section id="contact-me">
