wrote psuedo code notes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <!-- Created a header and linked my css style sheet to my HTML page -->
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- Titled my portfolio page -->
     <title class="title">Katlyn's Portfolio</title>
   </head>
-
+  <!-- Created the Main Body of my Header page -->
   <body>
     <header>
+      <!-- Created my header and nav bar -->
       <div class="logo"><h1>Katlyn Boches</h1></div>
       <nav>
         <a href="#about-me">About Me</a>
@@ -16,95 +19,111 @@
         <a href="/KatlynBoches.html">Resume</a>
       </nav>
     </header>
+    <!-- Input a main image below my nav bar and created a subtitle -->
     <div class="main-image">
       <div class="subtitle"><h1>Going to be a Computer Programmer!!!</h1></div>
     </div>
+    <!-- Created my Main info and body section -->
     <main>
       <section id="about-me">
         <h1>About Me</h1>
+        <!-- Wrote my about me section -->
         <div>
-          Hello, n=my name is Katlyn Boches! <br />I am a Colorado Native and
-          current business major at CU Boulder.
+          Hello, my name is Katlyn Boches! <br /><br /><br />
+          <!-- Included and current headshot and created an alt tag for it -->
           <img src="./assets/images/headshot.jpg" alt="headshot" />
-
-          I have been in the Food Service Management industry for over three
-          years and love to travel. I am eager to get started with my career in
-          this field, I am a travel enthusiast with skills in business,
-          marketing, and computer programming. I am looking to use my skills to
-          start a successful career in the Computer Programming Industry.>
+          I am a Colorado Native and current student at the University of Denver
+          Full-stack coding bootcamp. In my free time I enjoy learning new
+          skills and working on personal goals and helping my community. I enjoy
+          hiking, camping and paddleboarding and am currently learning American
+          sign language and lyra hoop, in my fitness classes. I enjoy spending
+          time with family and friends playing board and games like chess, and
+          cribbage.
+          <!-- Included a break between paragraphs -->
+          <br /><br />
+          After graduating from culinary school with a Bachelor's of Science in
+          Food Service Management I decided on broadening my horizons and seeing
+          the world. I am a travel enthusiast with skills in business,
+          marketing, and computer programming. I spent the next 10 years
+          traveling both internationally and the United States getting a variety
+          of experince in different jobs, that have given my a wealth of
+          knowledge in both business and customer service as well as
+          hospitality. I am eager to get started with my career in this field, I
+          am looking to use my skills to start a successful career in the
+          Computer Programming Industry.
         </div>
       </section>
-      <section id = "work">
-          <h1>Work</h1>
-          <div>
-            <a class="work-main-class" href="https://www.epicurious.com/">
-              <img
-                class="work-img"
-                src="./assets/images/food.jpg"
-                alt="recipe"
-              />
-              <div class="work-subtitle">
-                <h3>Recipe Website</h3>
-              </div>
-            </a>
-            <a
-              class="work-link"
-              href="https://freshysites.com/web-design-development/best-gym-and-fitness-websites/"
-              target="_blank"
-            >
-              <img
-                class="work-img"
-                src="./assets/images/fitness.jpg"
-                alt="fitnes-webpage"
-              />
-              <div class="work-subtitle"><h3>Fitness Website</h3></div></a
-            >
-            <a
-              class="work-link"
-              href="https://en.wikipedia.org/wiki/Dance"
-              target="_blank"
-              ><img
-                class="work-img"
-                src="./assets/images/dancing.jpeg"
-                alt="dancers-dancing"
-              />
-              <div class="work-subtitle"><h3>Dancing App</h3></div></a
-            >
-            <a
-              class="work-link"
-              href="https://en.wikipedia.org/wiki/Web_application"
-              target="_blank"
-            >
-              <img
-                class="work-img"
-                src="./assets/images/open laptop.jpg"
-                alt="web-app"
-              />
-              <div class="work-subtitle"><h3>Web App</h3></div>
-              </a>
-            
-            <a
-              class="work-link"
-              href="https://playingcarddecks.com/blogs/all-in/40-great-card-games-for-all-occasions"
-              target="_blank"
-              >
+      <section id="work">
+        <h1>Work</h1>
+        <div>
+          <!-- Edited div and images layout to make it easier to read -->
+          <a
+            class="work-main-class"
+            href="https://www.epicurious.com/"
+            target="_blank">
+            <img class="work-image" src="./assets/images/food.jpg" alt="recipe" />
+            <div class="work-subtitle">
+              <h3>Project 1: Recipe Website - Coming Soon</h3>
+            </div>
+          </a>
+          <a
+            class="working-app"
+            href="https://freshysites.com/web-design-development/best-gym-and-fitness-websites/"
+            target="_blank">
             <img
-                class="work-img"
-                src="./assets/images/cards.jpg"
-                alt="sort-deck-function"
-                />
-
-              <div class="work-subtitle">
-                <h3>Playing Cards Fuction Creator</h3>
-              </div>
-            </a>
-          </div>
-        
+              class="work-image"
+              src="./assets/images/fitness.jpg"
+              alt="fitnes-webpage"
+            />
+            <div class="work-subtitle">
+              <h3>Fitness Website</h3>
+            </div>
+          </a>
+          <a
+            class="working-app"
+            href="https://en.wikipedia.org/wiki/Dance"
+            target="_blank">
+            <img
+              class="work-image"
+              src="./assets/images/dancing.jpeg"
+              alt="dancers-dancing"
+            />
+            <div class="work-subtitle">
+              <h3>Dancing App</h3>
+            </div>
+          </a>
+          <a
+            class="working-app"
+            href="https://en.wikipedia.org/wiki/Web_application"
+            target="_blank">
+            <img
+              class="work-image"
+              src="./assets/images/open laptop.jpg"
+              alt="web-app"
+            />
+            <div class="work-subtitle">
+              <h3>Web App</h3>
+            </div>
+          </a>
+          <a
+            class="working-app"
+            href="https://playingcarddecks.com/blogs/all-in/40-great-card-games-for-all-occasions"
+            target="_blank">
+            <img
+              class="work-image"
+              src="./assets/images/cards.jpg"
+              alt="sort-deck-function"
+            />
+            <div class="work-subtitle">
+              <h3>Playing Cards Fuction Creator</h3>
+            </div>
+          </a>
+        </div>
       </section>
       <section id="contact-me">
         <h1>Contact Me</h1>
         <div>
-          <a href="phone-number">(720) 628-3887)</a>
+          <a href="phone-number">(720) 628-3887</a>
           <a href="mailto:katlynboches@gmail.com" target="_blank"
             >katlynboches@gmail.com</a
           >
