changed header logo width

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <!-- Input a main image below my nav bar and created a subtitle -->
     <div class="main-image">
-      <div class="subtitle"><h1>Going to be a Computer Programmer!!!</h1></div>
+      <div class="subtitle"><h1>Future Computer Programmer!!!</h1></div>
     </div>
     <!-- Created my Main info and body section -->
     <main>
@@ -63,7 +63,7 @@
             target="_blank">
             <img class="work-image" src="./assets/images/food.jpg" alt="recipe" />
             <div class="work-subtitle">
-              <h3>Project 1: Recipe Website - Coming Soon</h3>
+              <h3>Recipe Website - Coming Soon</h3>
             </div>
           </a>
           <a
@@ -76,7 +76,7 @@
               alt="fitnes-webpage"
             />
             <div class="work-subtitle">
-              <h3>Fitness Website</h3>
+              <h3>Fitness Website: Coming Soon!</h3>
             </div>
           </a>
           <a
@@ -89,7 +89,7 @@
               alt="dancers-dancing"
             />
             <div class="work-subtitle">
-              <h3>Dancing App</h3>
+              <h3>Dancing App: Coming Soon!</h3>
             </div>
           </a>
           <a
@@ -102,7 +102,7 @@
               alt="web-app"
             />
             <div class="work-subtitle">
-              <h3>Web App</h3>
+              <h3>Web App: Coming Soon!</h3>
             </div>
           </a>
           <a
@@ -115,7 +115,7 @@
               alt="sort-deck-function"
             />
             <div class="work-subtitle">
-              <h3>Playing Cards Fuction Creator</h3>
+              <h3>Play Cards: Coming Soon!</h3>
             </div>
           </a>
         </div>
