changed font and background colors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <!-- Input a main image below my nav bar and created a subtitle -->
     <div class="main-image">
-      <div class="subtitle"><h1>Future Computer Programmer!!!</h1></div>
+      <div class="subtitle">Future Computer Programmer!!!</div>
     </div>
     <!-- Created my Main info and body section -->
     <main>
@@ -61,78 +61,70 @@
             class="work-main-class"
             href="https://www.epicurious.com/"
             target="_blank">
+            <!-- Added Image to Project section and alt tag -->
             <img class="work-image" src="./assets/images/food.jpg" alt="recipe" />
-            <div class="work-subtitle">
-              <h3>Recipe Website - Coming Soon</h3>
-            </div>
+            <div class="work-subtitle">Recipe Website - Coming Soon</div>
           </a>
           <a
             class="working-app"
             href="https://freshysites.com/web-design-development/best-gym-and-fitness-websites/"
             target="_blank">
+            <!-- Added Image to Project section and alt tag -->
             <img
               class="work-image"
               src="./assets/images/fitness.jpg"
               alt="fitnes-webpage"
             />
-            <div class="work-subtitle">
-              <h3>Fitness Website: Coming Soon!</h3>
-            </div>
+            <div class="work-subtitle">Fitness Website: Coming Soon!</div>
           </a>
           <a
             class="working-app"
             href="https://en.wikipedia.org/wiki/Dance"
             target="_blank">
+            <!-- Added Image to Project section and alt tag -->
             <img
               class="work-image"
               src="./assets/images/dancing.jpeg"
               alt="dancers-dancing"
             />
-            <div class="work-subtitle">
-              <h3>Dancing App: Coming Soon!</h3>
-            </div>
+            <div class="work-subtitle">Dancing App: Coming Soon!</div>
           </a>
           <a
             class="working-app"
             href="https://en.wikipedia.org/wiki/Web_application"
             target="_blank">
+            <!-- Added Image to Project section and alt tag -->
             <img
               class="work-image"
               src="./assets/images/open laptop.jpg"
               alt="web-app"
             />
-            <div class="work-subtitle">
-              <h3>Web App: Coming Soon!</h3>
+            <div class="work-subtitle">Web App: Coming Soon!</div>
             </div>
           </a>
           <a
             class="working-app"
             href="https://playingcarddecks.com/blogs/all-in/40-great-card-games-for-all-occasions"
             target="_blank">
+            <!-- Added Image to Project section and alt tag -->
             <img
               class="work-image"
               src="./assets/images/cards.jpg"
               alt="sort-deck-function"
             />
-            <div class="work-subtitle">
-              <h3>Play Cards: Coming Soon!</h3>
-            </div>
+            <div class="work-subtitle">Play Cards: Coming Soon!</div>
           </a>
         </div>
       </section>
       <section id="contact-me">
         <h1>Contact Me</h1>
         <div>
-          <a href="phone-number">(720) 628-3887</a>
-          <a href="mailto:katlynboches@gmail.com" target="_blank"
-            >katlynboches@gmail.com</a
-          >
-          <a href="https://github.com/Katlyn627" target="_blank">Github</a>
-          <a
-            href="https://www.linkedin.com/in/katlyn-boches-20110732/"
-            target="_blank"
-            >LinkedIn</a
-          >
+          <ul>
+            <a href="phone-number">(720) 628-3887</a>
+            <a href="mailto:katlynboches@gmail.com" target="_blank">katlynboches@gmail.com</a>
+            <a href="https://github.com/Katlyn627" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/in/katlyn-boches-20110732/" target="_blank">LinkedIn</a>
+          </ul>
         </div>
       </section>
     </main>
