edited fonts and fixed resume

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             target="_blank">
             <!-- Added Image to Project section and alt tag -->
             <img class="work-image" src="./assets/images/food.jpg" alt="recipe" />
-            <div class="work-subtitle">Recipe Website - Coming Soon</div>
+            <div class="work-subtitle">
+              <h3>Recipe Website - Coming Soon</h3>
+            </div>
           </a>
           <a
             class="working-app"
@@ -75,7 +77,9 @@
               src="./assets/images/fitness.jpg"
               alt="fitnes-webpage"
             />
-            <div class="work-subtitle">Fitness Website: Coming Soon!</div>
+            <div class="work-subtitle">
+              <h3>Fitness Website: Coming Soon!</h3>
+            </div>
           </a>
           <a
             class="working-app"
@@ -87,7 +91,9 @@
               src="./assets/images/dancing.jpeg"
               alt="dancers-dancing"
             />
-            <div class="work-subtitle">Dancing App: Coming Soon!</div>
+            <div class="work-subtitle">
+              <h3>Dancing App: Coming Soon!</h3>
+            </div>
           </a>
           <a
             class="working-app"
@@ -99,7 +105,8 @@
               src="./assets/images/open laptop.jpg"
               alt="web-app"
             />
-            <div class="work-subtitle">Web App: Coming Soon!</div>
+            <div class="work-subtitle">
+              <h3>Web App: Coming Soon!</h3>
             </div>
           </a>
           <a
@@ -112,7 +119,9 @@
               src="./assets/images/cards.jpg"
               alt="sort-deck-function"
             />
-            <div class="work-subtitle">Play Cards: Coming Soon!</div>
+            <div class="work-subtitle">
+              <h3>Play Cards: Coming Soon!</h3>
+            </div>
           </a>
         </div>
       </section>
