--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         </div>
       </section>
       <section id="contact-me">
+        <!-- Added links to my Github, email, and LinkedIn Profile -->
         <h1>Contact Me</h1>
         <div>
           <ul>
