--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <!-- Added Image to Project section and alt tag -->
             <img class="work-image" src="./assets/images/food.jpg" alt="recipe" />
             <div class="work-subtitle">
-              <h3>Recipe Website - Coming Soon</h3>
+              <h3>Recipe Website: Coming Soon!</h3>
             </div>
           </a>
           <a
