--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#about-me">About Me</a>
         <a href="#work">Work</a>
         <a href="#contact-me">Contact Me</a>
-        <a href="/KatlynBoches.html">Resume</a>
+        <a href="/Resume2021.html">Resume</a>
       </nav>
     </header>
     <!-- Input a main image below my nav bar and created a subtitle -->
